# espBrideIdf

./: BUILD_AND_TEST.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  spi_interface_design.md
Trainer/: Trainer.py
main/: CMakeLists.txt  app_cycle.hpp  main.cc  main_functions.cc  main_functions.h  main_functions.hpp  spi_interface.c  spi_interface.h  spi_test.c  spi_test.h  trajectory_buffer.cc  trajectory_buffer.hpp
main/include/: app_cycle.hpp  ml_inference.hpp  spi_interface.h  trajectory_buffer.hpp
main/src/: app_cycle.cc  main.cc  ml_inference.cc  trajectory_buffer.cc
